# the-nitty-gritty

./: .clangd  .flake8  .gitignore  .gitmodules  README.md  mypy.ini
c-cpp/cpp-only/06_poc/06_pc-queue/: CMakeLists.txt  README.md
c-cpp/cpp-only/06_poc/06_pc-queue/cmake/: compiler-flags.cmake  sanitizers.cmake
c-cpp/cpp-only/06_poc/06_pc-queue/include/readerwriterqueue/: atomicops.h  readerwriterqueue.h
c-cpp/cpp-only/06_poc/06_pc-queue/include/xenium/: ramalhete_queue.hpp
c-cpp/cpp-only/06_poc/06_pc-queue/include/xenium/reclamation/: generic_epoch_based.hpp
c-cpp/cpp-only/06_poc/06_pc-queue/src/: CMakeLists.txt  benchmarker.h  main.cpp  pc_queue.h
c-cpp/cpp-only/06_poc/06_pc-queue/src/pc_queue_impl/: atomic_queue.h  mutex_deque.h  ramalhete_queue.h  reader_writer_queue.h  reader_writer_ring_buffer.h
c/04_fancy-functions/04_python-interface/2_python-callback/: CMakeLists.txt  Makefile  README.md  func.c  func.h  main.c  main.py
c/04_posix-api/04_concurrency-and-synchronization/2_multiprocessing/cpu-affinity/: CMakeLists.txt  process-pinning.c  thread-pinning.c
c/04_posix-api/04_concurrency-and-synchronization/2_multiprocessing/synchronization/: CMakeLists.txt  README.md  pthread-mutex-in-shm-common.h  pthread-mutex-in-shm-daemon.c  pthread-mutex-in-shm-on-demand.c  semaphore-daemon.c  semaphore-on-demand.c
c/04_posix-api/04_concurrency-and-synchronization/2_multiprocessing/synchronization/1_semaphore/: .clang-format  CMakeLists.txt  README.md  common.h  semaphore-daemon.c  semaphore-on-demand.c
c/05_parallelism/2_mkl/1_sum/: CMakeLists.txt  func.c  main.py
c/05_parallelism/2_mkl/2_vector-scalar-multiplication/: CMakeLists.txt  func.c  main.py
c/05_parallelism/2_mkl/4_vector-ln/: CMakeLists.txt  Makefile  func.c  func.h  main.py  utils.h
c/05_parallelism/2_mkl/5_vector-pow/: CMakeLists.txt  func.c  main.py
cpp/01_raii-and-the-rule-of-five/: CMakeLists.txt  Makefile
cpp/01_raii-and-the-rule-of-five/constructor-basics/: Makefile  base-constructor.cpp  copy-constructor.cpp  copy-elision.cpp
cpp/01_raii-and-the-rule-of-five/destructor-basics/: main.cpp
cpp/01_raii-and-the-rule-of-five/raii/: 02_raw-pointers-with-raii.cpp  README.md
cpp/01_raii-and-the-rule-of-five/rule-of-five/: 1_rule-of-three.cpp  2_lvalue-vs-rvalue.cpp  3_rule-of-five.cpp  CMakeLists.txt  Makefile.bak  README.md  constructors.cpp  move-senamtics.cpp  my-string-impl.h  point-impl.h
cpp/02_polymorphism/: CMakeLists.txt  README.md  crtp.cpp  crtp.h  driver.cpp  function-overloading.cpp  function-overloading.h  function-overriding-with-crtp.h  function-overriding.cpp  function-overriding.h
cpp/04_templates/: 1_hello-world.asm  1_hello-world.cpp  2_dynamic-input.asm  2_dynamic-input.cpp  3_noinline.asm  4_edge-cases.cpp  4_perfect-forwarding.cpp  5_trait.cpp  7_concept.cpp  7_constraints-and-concepts.cpp  8_perfect-forwarding.cpp  CMakeLists.txt  Makefile  README.md  gpp.version
cpp/04_templates-and-metaprogramming/: 6_building-blocks-of-metaprogramming-impl.h  6_building-blocks-of-metaprogramming-test.cpp  7_type-traits-impl.h  7_type-traits-test.cpp  CMakeLists.txt
cpp/04_templates-and-metaprogramming/1_advanced-usage/: 1_trait.cpp  2_parameter-pack.cpp  4_perfect-forwarding.cpp  CMakeLists.txt  vcpkg.json
cpp/04_templates-and-metaprogramming/2_implementation/: .clang-format  CMakeLists.txt  type-traits-test.cpp
cpp/04_templates/0_basic-usage/: Makefile
cpp/04_templates/1_advanced-usage/: vcpkg.json
cpp/04_templates/2_implementation/: type-traits-impl.h  type-traits-test.cpp  vcpkg.json
cpp/04_templates/basics/: 3_noinline.cpp  4_edge-cases.cpp
cpp/06_fancy-functions/03_python-interface-swig/: CMakeLists.txt  Makefile  README.md  build.py  libs.cpp  libs.h  libs.i  libs.py  libs_wrap.cxx  main.py  mylibs.cpp  mylibs.i  mylibs.py  mylibs_wrap.cxx
cpp/06_manual-memory-management/: 1_usage.cpp  2_my-class-scoped-new-and-delete-impl.h  2_my-class-scoped-new-and-delete-test.cpp  3_my-global-scoped-new-and-delete-impl.h  3_my-global-scoped-new-and-delete-test.cpp  4_my-allocator-impl.h  4_my-allocator-test.cpp  CMakeLists.txt  README.md  vcpkg.json
cpp/06_poc/03_python-interface-swig/: CMakeLists.txt  Makefile  MyIf.cs  README.md  Student.cs  _mylibs.cp38-win_amd64.pyd  main.py  mylib.cpp  mylib.h  mylib.py  mylibs.cpp  mylibs.h  mylibs.i  mylibs.py  mylibsPINVOKE.cs  mylibs_wrap.h  setup.py
cpp/06_poc/03_python-interface-swig/csharp-wrapper/: csharp-wrapper.sln
cpp/06_poc/03_python-interface-swig/csharp-wrapper/csharp-wrapper/: Program.cs  csharp-wrapper.csproj  mylibs.cs  mylibsCSHARP_wrap.h
cpp/06_poc/03_python-interface-swig/python-wrapper/: _mylib.cp38-win_amd64.pyd  main.py  mylib.py
cpp/08_pointers/: 1_value-ref-and-pointer.cpp  1_value-ref-and-pointer.md  2_unique-ptr-demo.cpp  2_unique-ptr-impl-test.cpp  2_unique-ptr-impl.h  2_unique-ptr.md  3_observer-pattern.cpp  3_pcqueue-pattern.cpp  3_shared-ptr-and-weak-ptr.md  3_shared-ptr-demo.cpp  3_shared-ptr.md  CMakeLists.txt  README.md  vcpkg.json
cpp/08_ref-and-pointers/: .gitignore  CMakeLists.txt  pcqueue-pattern.cpp  shared_ptr_demo.cpp  unique_ptr.cpp  unique_ptr_demo.cpp  unique_ptr_impl.h  unique_ptr_impl_test.cpp  uniqut_ptr.md  value-ref-and-pointer.md
cpp/09_stl/2_iterator/: .clang-format  1_usage.cpp  1_use.cpp  2_forward-iterator-impl.h  2_forward-iterator-test.cpp  2_forward_iterator.cpp  2_forward_iterator.h  2_write.cpp  3_bidirectional-iterator-impl.h  3_bidirectional-iterator-test.cpp  4_random-access-iterator-impl.h  4_random-access-iterator-test.cpp  CMakeLists.txt  Makefile  README.md  vcpkg.json
csharp/: README.md
dynamic-array/: dynamic-array
int-to-char/: int-to-char  int-to-char.c  int-to-char.out
integer-overflow/: integer-overflow  integer-overflow.c
invert-matrix/: generate-random-num  invert-matrix.in
mre/: CMakeLists.txt
mre/src/camera-server/: CMakeLists.txt  deviceManager.cpp  deviceManager.h  eventLoop.h  main.cpp
persisting-tables/: countries
quicksort-c-vs-python/: README.md  quicksort.c
stack-overflow/: stack-overflow.c
stack-size/: README.md  (+6 more)
(+1066 files in other folders)
